# graph_rag

./: .env.example  README.md  pyproject.toml  query.py  sample_document.md  train.py
src/: __init__.py
src/graph_rag/: __init__.py
src/graph_rag/config/: __init__.py  settings.py
src/graph_rag/core/: __init__.py  inference.py  trainer.py
storage/my_graph/: docstore.json  graph_store.json  index_store.json
