[project]
name = "graph-rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "llama-index>=0.14.3",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-graph-stores-neo4j>=0.5.1",
    "llama-index-llms-openai>=0.5.6",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "python-dotenv>=1.1.1",
]
